--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -56,11 +56,9 @@
                                             class="glyphicon glyphicon-list-alt"></span>数据</a>
                                 </td>
                                 <td>
-                                    <input type="text" class="btn btn-xs" value="{$vo.shareUrl}" name="{$vo.tid}"
-                                        id="{$vo.tid}">
-                                    <a href="javascript:;" class="copy btn btn-xs btn-info" dataid="{$vo.tid}"><span
-                                            class="glyphicon glyphicon-share-alt"></span>分享</a>
-                                    <a href="{$vo.shareUrl}" target="_blank" class="copy btn btn-xs btn-default"><span
+                                    <input type="text" class="btn btn-xs" value="{$vo.shareUrl}" name="{$vo.tid}"id="{$vo.tid}">
+                                    <a href="javascript:;" class="copy btn btn-xs btn-info" dataid="{$vo.tid}"><span class="glyphicon glyphicon-share-alt"></span>分享</a>
+                                    <a href="{$vo.shareUrl}" target="_blank" class="btn btn-xs btn-default"><span
                                             class="glyphicon glyphicon-eye-open"></span>查看任务</a>
                                 </td>
                                 <td>{$vo.create_time|date='Y年m月d日 H:i'}</td>
