--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -109,8 +109,89 @@
     <script src="__JS__/jquery.min.js"></script>
     <script src="__JS__/bootstrap.min.js"></script>
     <script src="__LIB__/layer/layer.js"></script>
+    <script src="__LIB__/layer_mobile/layer.js"></script>
     <script src="__JS__/jquery.validate.min.js"></script>
     <script src="__JS__/messages_zh.min.js"></script>
+    <script>
+
+        function IsPC() {
+            var userAgentInfo = navigator.userAgent;
+            var Agents = ["Android", "iPhone",
+                "SymbianOS", "Windows Phone",
+                "iPad", "iPod"];
+            var flag = true;
+            for (var v = 0; v < Agents.length; v++) {
+                if (userAgentInfo.indexOf(Agents[v]) > 0) {
+                    flag = false;
+                    break;
+                }
+            }
+            return flag;
+        };
+        var isPC = IsPC();
+        if (isPC) {
+            layer = layer;
+            function showMsg(msg) {
+                layer.msg(
+                    msg, {
+                    icon: 6,
+                    time: 2000
+                })
+            }
+
+            function showMsgAndHref(data) {
+                layer.msg(
+                    data.msg, {
+                    icon: 6,
+                    time: 2000
+                },
+                    function () {
+                        location.href = data.url;
+                    }
+                );
+            }
+
+            function showErrorMsg(msg) {
+                layer.open({
+                    title: "错误！",
+                    content: msg,
+                    icon: 5,
+                    anim: 5
+                });
+            }
+        }
+        else {
+            layer = mobile;
+            function showMsg(msg) {
+                //提示
+                layer.open({
+                    content: msg
+                    , skin: 'msg'
+                    , time: 2 //2秒后自动关闭
+                });
+            }
+
+            function showMsgAndHref(data) {
+                layer.open({
+                    content: data.msg
+                    , btn: '我知道了'
+                    , end: function (index) {
+                        setTimeout(function () {
+                            // $.mobile.changePage(data.url); //手机网页式跳转
+                            location.href=data.url
+                        }, 500);
+                    }
+                });
+
+            }
+            function showErrorMsg(msg) {
+                layer.open({
+                    content: msg
+                    , btn: '我知道了'
+                });
+            }
+        }
+    </script>
     <script>
         $(function () {
             $("#submitOpt").click(function () {
@@ -128,62 +209,56 @@
                             data: $('form').serialize(),
                             success: function (data) {
                                 if (data.code == 1) {
-                                    layer.msg(
-                                        data.msg, {
-                                        icon: 6,
-                                        time: 2000
-                                    },
-                                        function () {
-                                            location.href = data.url;
-                                        }
-                                    );
+                                    showMsgAndHref(data)
                                 } else if (data.code == 101) {
-                                    layer.confirm(data.msg, {
-                                        title: '数据覆盖确认',
-                                        icon: 3
-                                    }, function (index) {
-                                        layer.close(index);
-                                        $.ajax({
-                                            url: "{:url('index/Template/collect')}",
-                                            type: 'post',
-                                            data: $('form').serialize(),
-                                            success: function (data) {
-                                                if (data.code == 1) {
-                                                    layer.msg(
-                                                        data.msg, {
-                                                        icon: 6,
-                                                        time: 2000
-                                                    },
-                                                        function () {
-                                                            location.href = data.url;
-                                                        }
-                                                    );
-                                                } else {
-                                                    layer.open({
-                                                        title: "提交失败",
-                                                        content: data.msg,
-                                                        icon: 6
-                                                    });
+                                    if (isPC) {
+                                        layer.confirm(data.msg, {
+                                            title: '数据覆盖确认',
+                                            icon: 3
+                                        }, function (index) {
+                                            layer.close(index);
+                                            $.ajax({
+                                                url: "{:url('index/Template/collect')}",
+                                                type: 'post',
+                                                data: $('form').serialize(),
+                                                success: function (data) {
+                                                    if (data.code == 1) {
+                                                        showMsgAndHref(data)
+                                                    } else {
+                                                        showErrorMsg("提交失败")
+                                                    }
                                                 }
+                                            });
+                                        });
+                                    } else {
+                                        //询问框
+                                        layer.open({
+                                            content: '该记录已存在，确认覆盖吗?'
+                                            , btn: ['确认', '取消']
+                                            , yes: function (index) {
+                                                $.ajax({
+                                                    url: "{:url('index/Template/collect')}",
+                                                    type: 'post',
+                                                    data: $('form').serialize(),
+                                                    success: function (data) {
+                                                        if (data.code == 1) {
+                                                            showMsgAndHref(data)
+                                                        } else {
+                                                            showErrorMsg("提交失败")
+                                                        }
+                                                    }
+                                                });
                                             }
                                         });
-                                    });
+                                    }
                                 } else {
-                                    layer.open({
-                                        title: "提交失败",
-                                        content: data.msg,
-                                        icon: 6
-                                    });
+                                    showErrorMsg("提交失败")
                                 }
-
                             },
                         });
                     }
                 });
         });
-
-
-
     </script>
 </body>
 
