--- a/application/admin/view/public/_footer.html
+++ b/application/admin/view/public/_footer.html
@@ -5,8 +5,85 @@
 <!--Beyond Scripts-->
 <script src="__JS__/beyond.js"></script>
 <script src="__LIB__/layer/layer.js"></script>
-
+<script src="__LIB__/layer_mobile/layer.js"></script>
 <script>
+
+    function IsPC() {
+        var userAgentInfo = navigator.userAgent;
+        var Agents = ["Android", "iPhone",
+            "SymbianOS", "Windows Phone",
+            "iPad", "iPod"];
+        var flag = true;
+        for (var v = 0; v < Agents.length; v++) {
+            if (userAgentInfo.indexOf(Agents[v]) > 0) {
+                flag = false;
+                break;
+            }
+        }
+        return flag;
+    };
+    var isPC = IsPC();
+    if (isPC) {
+        layer = layer;
+        function showMsg(msg) {
+            layer.msg(
+                msg, {
+                icon: 6,
+                time: 2000
+            })
+        }
+
+        function showMsgAndHref(data) {
+            layer.msg(
+                data.msg, {
+                icon: 6,
+                time: 2000
+            },
+                function () {
+                    location.href = data.url;
+                }
+            );
+        }
+
+        function showErrorMsg(msg) {
+            layer.open({
+                title: "错误！",
+                content: msg,
+                icon: 5,
+                anim: 5
+            });
+        }
+    }
+    else {
+        layer = mobile;
+        function showMsg(msg) {
+            //提示
+            layer.open({
+                content: msg
+                , skin: 'msg'
+                , time: 2 //2秒后自动关闭
+            });
+        }
+
+        function showMsgAndHref(data) {
+            layer.msg(
+                data.msg, {
+                icon: 6,
+                time: 2000
+            },
+                function () {
+                    location.href = data.url;
+                }
+            );
+        }
+
+        function showErrorMsg(msg) {
+            layer.open({
+                content: msg
+                , btn: '我知道了'
+            });
+        }
+    }
     $(function () {
         $("#loginout").click(function () {
             $.ajax({
@@ -37,33 +114,6 @@
         });
     });
 
-    function showMsg(msg) {
-        layer.msg(
-            msg, {
-            icon: 6,
-            time: 2000
-        })
-    }
 
-    function showMsgAndHref(data) {
-        layer.msg(
-            data.msg, {
-            icon: 6,
-            time: 2000
-        },
-            function () {
-                location.href = data.url;
-            }
-        );
-    }
-
-    function showErrorMsg(msg) {
-        layer.open({
-            title: "错误！",
-            content: msg,
-            icon: 5,
-            anim: 5
-        });
-    }
 
 </script>
