--- a/application/admin/view/admin/add.html
+++ b/application/admin/view/admin/add.html
@@ -1,6 +1,8 @@
 {extend name="public/admin_base"}
 {block name="title"}添加用户{/block}
-{block name="page-breadcrumb"}控制面板 / 用户管理 / 添加用户{/block}
+{block name="page-breadcrumb"}
+<li class="active">添加用户</li>
+{/block}
 {block name="page-main"}
 <!-- Page Body -->
 <div class="page-body">
