--- a/application/admin/view/admin/edit.html
+++ b/application/admin/view/admin/edit.html
@@ -1,6 +1,8 @@
 {extend name="public/admin_base"}
 {block name="title"}编辑用户{/block}
-{block name="page-breadcrumb"}控制面板 / 用户管理 / 用户修改{/block}
+{block name="page-breadcrumb"}
+<li class="active">编辑用户信息</li>
+{/block}
 {block name="page-main"}
 <!-- Page Body -->
 <div class="page-body">
