--- a/application/admin/view/admin/list.html
+++ b/application/admin/view/admin/list.html
@@ -1,6 +1,8 @@
 {extend name="public/admin_base"}
 {block name="title"}用户列表{/block}
-{block name="page-breadcrumb"}控制面板 / 用户管理 / 用户列表{/block}
+{block name="page-breadcrumb"}
+<li class="active">用户列表</li>
+{/block}
 {block name="page-main"}
 <!-- Page Body -->
 <div class="page-body">
