--- a/application/admin/view/hand/index.html
+++ b/application/admin/view/hand/index.html
@@ -1,6 +1,10 @@
 {extend name="public/admin_base"}
 
-{block name="title"}创建模板{/block}
+{block name="title"}创建任务{/block}
+{block name="page-breadcrumb"}
+<li>创建任务</li>
+<li class="active">手动创建任务</li>
+{/block}
 {block name="page-style"}
 <link href="__CSS__/main.css" rel="stylesheet">
 <style>
