--- a/application/admin/view/import/create_template_first.html
+++ b/application/admin/view/import/create_template_first.html
@@ -1,6 +1,10 @@
 {extend name="public/admin_base"}
 
 {block name="title"}导入模板文件{/block}
+{block name="page-breadcrumb"}
+<li>创建模板</li>
+<li class="active">导入模板</li>
+{/block}
 {block name="page-style"}
 <link href="__CSS__/main.css" rel="stylesheet">
 {/block}
