--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -1,6 +1,8 @@
 {extend name="public/admin_base"}
-{block name="title"}添加任务{/block}
-添加任务 / 添加任务
+{block name="title"}创建任务{/block}
+{block name="page-breadcrumb"}
+<li class="active">创建任务</li>
+{/block}
 {block name="page-main"}
 
 <div class="row">
