--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -1,6 +1,8 @@
 {extend name="public/admin_base"}
 {block name="title"}任务列表{/block}
-{block name="page-breadcrumb"}控制面板 / 任务管理{/block}
+{block name="page-breadcrumb"}
+<li class="active">任务列表</li>
+{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-xs-12">
@@ -8,7 +10,6 @@
             <div class="widget-header bg-themeprimary">
                 <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Home/index\')}';"/></i>
                 <span class="widget-caption">任务列表</span>
-                
             </div>
             <div class="widget-body">
                 <div class="table-responsive">
