--- a/application/admin/view/home/index.html
+++ b/application/admin/view/home/index.html
@@ -1,5 +1,13 @@
 {extend name="public/admin_base"}
-
+{block name="page-style"}
+<style>
+    .grid>div {
+        color: #fff;
+        line-height: 2;
+        color: aquamarine;
+        }
+</style>
+{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-xs-12">
@@ -14,9 +22,9 @@
     <div class="col-xs-12">
         <div class="well with-header with-footer">
             <div class="header bg-themeprimary">
-                服务器信息
+                常用功能
             </div>
-            <table class="table table-hover table-bordered">
+            <!-- <table class="table table-hover table-bordered">
                 <thead>
                     <tr>
                         <th colspan="2">服务器信息</th>
@@ -45,10 +53,23 @@
                         <td>{$Think.session.admin.last_time|date="Y年m月d日"}</td>
                     </tr>
                 </tbody>
-            </table>
+            </table> -->
+            <div class="square">
+                <div class="row">
+                    <div class="col-lg-1">1</div>
+                    <div class="col-lg-2">2</div>
+                    <div class="col-lg-3">3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                </div>
+            </div>
             <div class="footer"></div>
         </div>
-       
+
     </div>
 </div>
 {/block}
