--- a/application/admin/view/home/index.html
+++ b/application/admin/view/home/index.html
@@ -54,7 +54,7 @@
                     </tr>
                 </tbody>
             </table> -->
-            <div class="square">
+            <!-- <div class="square">
                 <div class="row">
                     <div class="col-lg-1">1</div>
                     <div class="col-lg-2">2</div>
@@ -66,7 +66,7 @@
                     <div>8</div>
                     <div>9</div>
                 </div>
-            </div>
+            </div> -->
             <div class="footer"></div>
         </div>
 
